# monodoc

./: CONTRIBUTING.md  README.md  pyproject.toml
monodoc/: __init__.py  __main__.py  pyproject.toml
monodoc/cli/: main.py
monodoc/core/: main.py
