[project]
name = "monodoc"
version = "0.1.0"
description = "Unified documentation platform for multi-repo, multi-branch ecosystems."
readme = "README.md"
authors = [{ name = "hfxz", email = "xuan__zai@outlook.com" }]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["ruff>=0.14.6"]
